# SmartSnake

./: .gitignore  CMakeLists.txt  README.md  cJSON.h  constants.h  define.h  example.cpp  game.cpp  game.h  interactiveObjects.cpp  interactiveObjects.h  main.cpp  object.cpp  object.h  scores.txt  snake.cpp  snake.h  test.cpp  test_object.cpp
